# area51

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  fast stuff.txt
Apps/GameApp/: A51-PS2-Disk-Config.ccz  A51.sln  A51.vcproj  A51.vcxproj  A51.vcxproj.filters  A51_2015.VC.VC.opendb  A51_2015.sln  Area51TitleInfo.txt  CMakeLists.txt  Config.cpp  Config.hpp  DBUGPS2.PS2  GameApp.dsp  GameApp.dsw  GameApp.sln  IniFile.cpp  IniFile.hpp  SYSTEM.CNF  UpgradeLog.htm  main.cpp  main.hpp  main_pc.inl  main_ps2.inl  main_xbox.inl  makedisk.bat  rtf_handler.cpp  splash.xbmp
Apps/GameApp/Backup/: A51.sln
Apps/GameApp/_Win32Debug/: vc140.idb
Apps/GameApp/_XboxQA/: A51.map  vc70.idb
Apps/GameApp/_ps2-debug/: _PS2_SN_Link.txt  _SN_ResponseFile.txt  _VC6_ResponseFile.txt  vc70.idb
Apps/GameApp/_ps2-optdebug/: A51.map.txt  _PS2_SN_Link.txt  _SN_ResponseFile.txt  _VC6_ResponseFile.txt  vc70.idb
Apps/GameApp/_xboxdebug/: A51.map  vc70.idb
Apps/GameApp/media/: Area51_PAL_640x480.tga  BadDisc_640x480.tga  BadDisc_640x480.xbmp  BadDisc_French_640x480.tga  BadDisc_French_640x480.xbmp  BadDisc_German_640x480.tga  BadDisc_German_640x480.xbmp  BadDisc_Italian_640x480.tga  BadDisc_Italian_640x480.xbmp  BadDisc_Spanish_640x480.tga  BadDisc_Spanish_640x480.xbmp  ESRB_640x480.xbmp  ESRB_720x480.xbmp  NTSC_Legal_640x480.tga  NTSC_Legal_640x480.xbmp  PAL_Legal_E_640x480.tga  PAL_Legal_E_640x480.xbmp  PAL_Legal_F_640x480.tga  PAL_Legal_F_640x480.xbmp  PAL_Legal_G_640x480.tga  PAL_Legal_G_640x480.xbmp  PAL_Legal_I_640x480.tga  PAL_Legal_I_640x480.xbmp  PAL_Legal_S_640x480.tga  PAL_Legal_S_640x480.xbmp  PAL_NonESRB_640x480.tga  PAL_NonESRB_640x480.xbmp  PS0000.PSH  PS0001.psh  PS0002.psh  PS0003.psh  PS0004.psh  PS0005.psh  PS0006.psh  PS0007.psh  PS0008.psh  PS0009.psh  PS0010.psh  PS0011.psh  PS0012.psh  (+70 more)
Apps/SoundPackager/libmp3lame/: Makefile.am  Makefile.in  VbrTag.c  VbrTag.h  bitstream.c  bitstream.h  debugscalefac.c  encoder.c  encoder.h  fft.c  fft.h  gain_analysis.c  gain_analysis.h  id3tag.c  id3tag.h  l3side.h  lame-analysis.h  lame.c  lame_global_flags.h  libmp3lame.dsp  libmp3lame_vc6.dsp  libmp3lame_vc6.vcproj  machine.h  mpglib_interface.c  newmdct.c  newmdct.h  presets.c  psymodel.c  quantize.c  quantize.h  quantize_pvt.c  quantize_pvt.h  reservoir.c  set_get.c  tables.c  takehiro.c  tools.h  util.c  util.h  vbrquantize.c  (+4 more)
Support/GameLib/: BinLevel.cpp  BinLevel.hpp  CMakeLists.txt  DebugCheats.cpp  DebugCheats.hpp  GameLib.dsp  Gamelib.sln  Gamelib.vcproj  Gamelib.vcxproj  Gamelib.vcxproj.filters  Level.cpp  Level.hpp  LevelLoader.cpp  LevelLoader.hpp  Link.cpp  Link.hpp  MemorySummary.cpp  MemorySummary.hpp  RenderContext.cpp  RenderContext.hpp  RigidGeomCollision.cpp  RigidGeomCollision.hpp  StatsMgr.cpp  StatsMgr.hpp  debris_rigid.cpp
Support/GameLib/Debug/: AIMgr.sbr  AStar.sbr  AStarNode.sbr  AnimDecompress.sbr  AnimEvent.sbr  AnimGroup.sbr  AnimInfo.sbr  AnimKeyData.sbr  AnimPlayer.sbr  AnimSurface.sbr  AnimTrack.sbr  Animation_obj.sbr  CharAnimPlayer.sbr  CollisionMgr.sbr  CollisionPrimatives.sbr  CombatAimer.sbr  ConnectionZoneMgr.sbr  Controller.sbr  DecalDefinition.sbr  DecalLoader.sbr  DecalMgr.sbr  DecalMgr_StaticDecals.sbr  DecalPackage.sbr  DestructibleObj.sbr  DistRule.sbr  Door.sbr  FloorProperties.sbr  FriendlyScientistLoco.sbr  GameLib.idb  GamePad.sbr  GeomBone.sbr  GlassSurface.sbr  Global_Dictionary.sbr  Global_Variables_Manager.sbr  GravChargeProjectile.sbr  GrayLoco.sbr  GrayRagdoll.sbr  GridHelper.sbr  GruntRagdoll.sbr  Guid.sbr  (+97 more)
Support/GameLib/_ps2-debug/: _PS2_SN_Lib.txt  _VC6_ResponseFile.txt  vc70.idb
Support/GameLib/_ps2-optdebug/: _PS2_SN_Lib.txt  _SN_ResponseFile.txt  _VC6_ResponseFile.txt  vc70.idb
Support/GameLib/_xboxdebug/: vc70.idb
Support/GameLib/_xboxqa/: vc70.idb
Support/NetworkMgr/: Blender.hpp  CMakeLists.txt  ClientProxy.cpp  ClientProxy.hpp  ClientProxyStates.cpp  ConnMgr.cpp  ConnMgr.hpp  DebugTicker.cpp  DebugTicker.hpp  GMMgr.cpp  GMMgr.hpp  GameClient.cpp  GameClient.hpp  GameClientStates.cpp  GameMgr.cpp  GameMgr.hpp  GameServer.cpp  GameServer.hpp  GameServerStates.cpp  GameState.cpp  GameState.hpp  MatchMgr.hpp  MatchMgr_Common.cpp  MatchMgr_PS2.cpp  MatchMgr_STUB.cpp  MatchMgr_WIN32.cpp  MatchMgr_XBOX.cpp  Messages.cpp  Messages.hpp  Move.cpp  Move.hpp  MoveMgr.cpp  MoveMgr.hpp  Msg.cpp  Msg.hpp  MsgClient.cpp  MsgClient.hpp  MsgMgr.cpp  MsgMgr.hpp  MsgQueue.hpp  (+36 more)
Support/NetworkMgr/Debug/: NetworkMgr.idb
Support/NetworkMgr/Defunct/: NetPickup.cpp  NetPickup.hpp  NetPlayer.cpp  NetPlayer.hpp  NetRocket.cpp  NetRocket.hpp
Support/NetworkMgr/GameSpy/: available.c  md5.h  (+14 more)
Support/Render/: CMakeLists.txt  CollisionVolume.cpp  CollisionVolume.hpp  LightMgr.cpp  LightMgr.hpp  Material.cpp  Material.hpp  MaterialArray.cpp  MaterialArray.hpp  Material_Prefs.hpp  ProjTextureMgr.cpp  ProjTextureMgr.hpp  Render.cpp  Render.dsp  Render.hpp  Render.sln  Render.vcproj  Render.vcxproj  Render.vcxproj.filters  RigidGeom.cpp  RigidGeom.hpp  SkinGeom.cpp  SkinGeom.hpp  SoftVertexMgr.cpp  SoftVertexMgr.hpp  Texture.cpp  Texture.hpp  VertexMgr.cpp  VertexMgr.hpp  editor_icons.cpp  geom.cpp  geom.hpp  geom_mgr.inl  pc_Render.cpp  platform_Render.hpp  ps2_Render.cpp  ps2_post.cpp  ps2_skin.cpp  ps2_skin.hpp  shader_mgr.inl  (+4 more)
xCore/Entropy/: CMakeLists.txt  Entropy.dsp  Entropy.hpp  Entropy.sln  Entropy.vcproj  Entropy.vcxproj  Entropy.vcxproj.filters  e_Audio.hpp  e_Draw.hpp  e_Engine.hpp  e_Input.hpp  e_Input_Gadget_Defines.hpp  e_Memcard.hpp  e_Network.hpp  e_Profile.cpp  e_Profile.hpp  e_ScratchMem.hpp  e_SimpleAllocator.hpp  e_Singleton.hpp  e_Text.hpp  e_VRAM.hpp  e_View.hpp  e_Virtual.hpp  e_input_gadgets.hpp
xCore/x_files/: CMakeLists.txt  x_array.hpp  x_bitmap.hpp  x_bitstream.hpp  x_bytestream.hpp  x_color.hpp  x_context.hpp  x_debug.hpp  x_fbbox.hpp  x_files.dsp  x_files.hpp  x_files.sln  x_files.vcproj  x_files.vcxproj  x_files.vcxproj.filters  x_locale.hpp  x_log.hpp  x_math.hpp  x_math_misc.hpp  x_memfile.hpp  x_memory.hpp  x_plus.hpp  x_stdio.hpp  x_string.hpp  x_target.hpp  x_threads.hpp  x_time.hpp  x_types.hpp
(+3705 files in other folders)
